<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/new_joke"
        android:textColor="@color/text"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/top_corners"
        android:backgroundTint="@color/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/categories_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="78dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/frame" />
                <EditText
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints=""
                    android:background="@drawable/frame"
                    android:ellipsize="end"
                    android:hint="@string/question_hint"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:textColor="@color/header"
                    android:textSize="20sp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="40dp"
                    />

                <EditText
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints=""
                    android:background="@drawable/frame"
                    android:ellipsize="end"
                    android:hint="@string/answer_hint"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:textColor="@color/header"
                    android:textSize="20sp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="40dp">
                </EditText>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/header"
                android:text="@string/save"
                android:textSize="20sp"
                android:textColor="@color/background"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="40dp">
            </Button>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>